fix: updated overflow setting for dag components so we see ellipsis instead of text that goes too far right.
issue: onepanelio/core#128

--- a/src/app/dag/dag.component.scss
+++ b/src/app/dag/dag.component.scss
@@ -92,6 +92,10 @@
   width: 200px;
   height: 42px;
   line-height:42px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 185px;
 }
 
 /deep/ .node .node-root.summary {
